--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload stuff in the sitedir folder
-          path: './sitedir/'
+          # Upload stuff in the siteSTUF folder
+          path: './sitestuf/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
